--- a/Lab_2/Views/Start/Index.cshtml
+++ b/Lab_2/Views/Start/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewBag.Title = "Notepad";
+
+    LocalData.LoadNotepads();
 }
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -15,8 +17,15 @@
 </head>
 <body onload="init()">
     <div class="new-notepad">
-        <input type="text" id="notepad-name" class="form-control" placeholder="Имя блокнота" data-bind="value: newNotepadName"/>
+        <input type="text" id="notepad-name" class="form-control" placeholder="Имя блокнота" data-bind="value: newNotepadName" />
         <button id="btn-create" class="btn btn-success" data-bind="click: createNotepad">Создать</button>
+    </div>
+    <div class="notepads" data-bind="foreach: notepads">
+        <div class="notepad-i" data-bind="text: notepadName, click: $parent.openNotepad"></div>
+    </div>
+    <div class="notepad-content">
+        <textarea rows="20" data-bind="value: notepadContent"></textarea>
+        <button class="btn btn-success" data-bind="click: saveContent">Сохранить</button>
     </div>
 </body>
 </html>
