--- a/Lab_2/Content/Site.css
+++ b/Lab_2/Content/Site.css
@@ -14,7 +14,10 @@
 
 .notepads {
     float: left;
-    width: 20%;
+    width: 18%;
+    margin-right: 2%;
+    position: relative;
+    top: 25px;
 }
 
 .notepad-i {
@@ -22,7 +25,8 @@
     text-align: center;
     cursor: pointer;
     word-wrap: break-word;
-    background-color: whitesmoke;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.3);
+    margin-bottom: 10px;
 }
 
 .notepad-content {
@@ -37,4 +41,13 @@
 .notepad-content button {
     margin-top: 20px;
     float: right;
+}
+
+.notepad-content img {
+    display: block;
+    margin: 0 auto;
+}
+
+.selected {
+    background-color: aquamarine;
 }
