--- a/Lab_2/Views/Start/Index.cshtml
+++ b/Lab_2/Views/Start/Index.cshtml
@@ -25,7 +25,7 @@
     </div>
     <div class="notepad-content">
         <img data-bind="attr: { src: notepadImage }" />
-        <textarea rows="20" data-bind="value: notepadContent"></textarea>
+        <textarea rows="20" data-bind="value: notepadContent" class="form-control"></textarea>
         <button class="btn btn-success" data-bind="click: saveContent">Сохранить</button>
     </div>
 </body>
